# github-actions-tutorial

./: Makefile  README.md  docker-compose.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: backend-test.yml  checkout.yml  deploy-swagger.yml  first-workflow.yml  frontend-build.yml  frontend-test.yml  matrix.yml  s3-deploy.yml
backend/: pyproject.toml
backend/application/: __init__.py  urls.py
backend/application/tests/: common_method.py  conftest.py  test_filters.py  test_health_check.py
backend/application/tests/factories/: customer.py  user.py  user_invitation.py  user_reset_password.py
backend/application/tests/models/: test_customer.py  test_user.py
backend/application/tests/serializers/: test_user.py
backend/application/tests/views/common/: test_login.py
backend/application/tests/views/customers/: test_send_sms.py
backend/application/tests/views/user/: test_invite_user.py  test_reset_password.py  test_user.py  test_verify_user.py
backend/project/settings/: base.py  dev.py  environment.py  local.py
backend/project/urls/: local.py
containers/django/: Dockerfile  entrypoint.sh
containers/nginx/: Dockerfile  nginx.local.conf
frontend/: next.config.mjs  package-lock.json  package.json
templates/: deploy-role.yml  s3-bucket.yml
